--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,7 +2,7 @@ name: Java CI/CD with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main_deactivated" ]
 
 jobs:
   build-and-deliver:
