--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Upload JAR artifact
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ steps.vars.outputs.artifact_name }}
+        name: ${{ vars.outputs.artifact_name }}
         path: target/*.jar
         retention-days: 30
 
