--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Set up JDK 17
+      id: setup-java
       uses: actions/setup-java@v4
       with:
         java-version: '17'
@@ -22,6 +23,7 @@ jobs:
 
     # This is the Maven Verify step
     - name: Maven Verify
+      id: maven_verify
       run: ./mvnw verify
 
     - name: Extract version and prepare artifact name 
@@ -40,6 +42,35 @@ jobs:
         name: ${{ steps.extract_step.outputs.artifact_name }}
         path: target/*.jar
         retention-days: 30
+
+    - name: Set build status
+      id: build_status
+      run: |
+        if [ "${{ steps.maven_verify.outcome }}" == "success" ]; then
+          echo "status=success" >> $GITHUB_OUTPUT
+        else
+          echo "status=failure" >> $GITHUB_OUTPUT
+          exit 1
+        fi        
+
+    - name: Generate build metadata
+      run: |
+        cat > build-metadata.json << EOF
+        {
+          "version": "${{ steps.extract_step.outputs.version }}",
+          "gitSha": "${{ steps.extract_step.outputs.full_sha }}",
+          "gitShortSha": "${{ steps.extract_step.outputs.short_sha }}",
+          "timestamp": "$(date -u +"%Y-%m-%dT%H:%M:%SZ")",
+          "javaVersion": "${{ steps.setup-java.outputs.java-version || '17' }}",
+          "buildStatus": "${{ steps.build_status.outputs.status }}",
+          "buildNumber": "${{ github.run_number }}",
+          "buildId": "${{ github.run_id }}",
+          "branch": "${{ github.ref_name }}",
+          "commitMessage": $(echo '${{ github.event.head_commit.message }}' | jq -Rs .),
+          "actor": "${{ github.actor }}"
+        }
+        EOF
+        cat build-metadata.json
 
     - name: Upload build metadata
       uses: actions/upload-artifact@v4
